# FFmpegAndroid

./: .gitignore  build.gradle  config.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/yuhanxun/ffmpegplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/yuhanxun/ffmpegplayer/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/yuhanxun/ffmpegplayer/: ExampleUnitTest.java
appCameraToH264/: build.gradle
appCameraToH264/src/androidTest/java/com/kedacom/demo/appcameratoh264/: ExampleInstrumentedTest.java
appCameraToH264/src/main/: AndroidManifest.xml
appCameraToH264/src/main/cpp/: AudioEncoder.h  AudioEncoderJni.cpp  CMakeLists.txt  FFmpegjni.cpp  FFmpegjni.h  FrameEncoder.cpp  FrameEncoder.h  Mp4Muxer.cpp  Mp4Muxer.h  VideoEncoder.cpp  VideoEncoder.h  X264Param.hpp  ffmpegjni.cpp
appCameraToH264/src/main/cpp/audioutil/: AudioEncoder.cpp  AudioEncoder.h  AudioEncoderJni.cpp  CMakeLists.txt
appCameraToH264/src/main/cpp/include/: Jnicom.h
appCameraToH264/src/main/cpp/include/libavutil/: ffversion.h
appCameraToH264/src/main/cpp/muxer/: CMakeLists.txt  Mp4Muxer.cpp  Mp4Muxer.h  MuxerJni.cpp
appCameraToH264/src/main/cpp/video/: CMakeLists.txt  VideoEncoder.cpp  X264EncoderJni.cpp
appCameraToH264/src/main/cpp/yuvjni/: CMakeLists.txt  YuvJni.cpp
appCameraToH264/src/main/cpp/yuvutil/: CMakeLists.txt  yuvutil.cpp
appCameraToH264/src/main/java/com/kedacom/demo/appcameratoh264/: App.java  AutoFitTextureView.java  Camera2Helper.java  FirstActivity.java  InitActivity.java  MainActivity.java  MainActivity_EncoderController.java  OldCameraActivity.java  PermissionActivity.java  WorkService.java
appCameraToH264/src/main/res/layout/: activity_init.xml  activity_main.xml  activity_oldcamera.xml  dialog_one_picker.xml  dialog_profile.xml  fragment_x264param.xml  layout_multiple_picker.xml  layout_one_picker.xml
appCameraToH264/src/main/res/layout-land/: activity_main.xml
appCameraToH264/src/main/res/values/: colors.xml  strings.xml
appCameraToH264/src/test/java/com/kedacom/demo/appcameratoh264/: ExampleUnitTest.java
appH264Render/: build.gradle
appH264Render/src/androidTest/java/com/example/apph264render/: ExampleInstrumentedTest.java
appH264Render/src/main/: AndroidManifest.xml
appH264Render/src/main/cpp/: CMakeLists.txt  H264DecodeThread.hpp  H264DecodeThread_open2.hpp  RGBRender.cpp  RGBRender.h  VideoDecoder.cpp  VideoDecoder.h  VideoPlayerJni.cpp
appH264Render/src/main/cpp/include/: Jnicom.h  logcat.h
appH264Render/src/main/cpp/rtsp/: CMakeLists.txt  FFmpegRtsp.cpp  FFmpegRtsp.h  RtspHelperJni.cpp
appH264Render/src/main/cpp/util/: ByteData.hpp  SyncQueue.hpp  Thread.hpp  ThreadHandler.cpp  ThreadHandler.h
appH264Render/src/main/cpp/yuvplayer/: CMakeLists.txt  SPSParse.cpp  SPSParse.h  YuvPlayerJni.cpp  YuvRender.cpp  YuvRender.h
appH264Render/src/main/cpp/yuvutil/: CMakeLists.txt  yuvutil.cpp
appH264Render/src/main/java/com/example/apph264render/: MainActivity.java  TestPermissionAct.java
appH264Render/src/main/java/com/example/apph264render/api/: IDataGenerator.java  IMediaCodec.java
appH264Render/src/main/java/com/example/apph264render/ffmpegcodec/: FFmpegCodec.java
appH264Render/src/main/java/com/example/apph264render/jni/: RtspHelperJni.java  VideoPlayerJni.java  YuvPlayerJni.java
appH264Render/src/main/java/com/example/apph264render/mediacodec/: H264SPSPaser.java  MediaCodecUtils.java  (+4 more)
appH264Render/src/main/res/layout/: activity_main.xml
appH264Render/src/main/res/values/: strings.xml
appH264Render/src/test/java/com/example/apph264render/: ExampleUnitTest.java
appH264ToRTP/: build.gradle
appH264ToRTP/src/androidTest/java/com/example/apph264tortp/: ExampleInstrumentedTest.java
appH264ToRTP/src/main/: AndroidManifest.xml
appH264ToRTP/src/main/cpp/: CMakeLists.txt  FFmpegjni.cpp  H264ToRtpThread.hpp  ICallback.h  RTPPackager.cpp  RTPPackager.h  RtpToH264Thread.hpp  SyncQueue.hpp  ThreadHandler.cpp  ThreadHandler.h  main.cpp  main.h
appH264ToRTP/src/main/cpp/bean/: ByteData.hpp
appH264ToRTP/src/main/cpp/include/: RTPPackager.h  ThreadHandler.h  logcat.h
appH264ToRTP/src/main/cpp/util/: Queue2.hpp  SyncQueue.hpp  ThreadHandler.cpp  ThreadHandler.h  YuvData.hpp
appH264ToRTP/src/main/java/com/example/apph264tortp/: MainActivity.java
appH264ToRTP/src/main/res/layout/: activity_main.xml
appH264ToRTP/src/main/res/values/: strings.xml
appH264ToRTP/src/test/java/com/example/apph264tortp/: ExampleUnitTest.java
buildscript/: ffmpeg_x264_build4android.sh  x264_build4android.sh
common/: build.gradle
common/src/main/: AndroidManifest.xml
keystore/: normal.jks
libffmpeg/: build.gradle
libffmpeg/src/androidTest/java/com/example/libffmpeg/: ExampleInstrumentedTest.java
libffmpeg/src/main/: AndroidManifest.xml
libffmpeg/src/main/cpp/include/: CoutLogcat.hpp  JniHelper.h
libffmpeg/src/main/res/values/: strings.xml
libffmpeg/src/test/java/com/example/libffmpeg/: ExampleUnitTest.java
libffmpegplayer/: CMakeLists.txt  build.gradle
libffmpegplayer/src/androidTest/java/com/example/ffmpeg/: ExampleInstrumentedTest.java
libffmpegplayer/src/main/cpp/: native-lib.cpp
libffmpegplayer/src/main/java/com/example/ffmpeg/: FFmpegNative.java
widget/: build.gradle
widget/src/androidTest/java/com/example/widget/: ExampleInstrumentedTest.java
widget/src/main/: AndroidManifest.xml
widget/src/main/java/com/example/widget/: AudioWaveView.java  MainActivity.java
widget/src/main/res/layout/: activity_main.xml
widget/src/main/res/values/: colors.xml
widget/src/test/java/com/example/widget/: ExampleUnitTest.java
widgetdatepicker/: build.gradle
widgetdatepicker/src/main/java/com/ycuwq/datepicker/: WheelPicker.java
widgetdatepicker/src/main/res/layout/: dialog_multiple_fragment.xml
(+151 files in other folders)
